--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
 	"private": true,
 	"dependencies": {
 		"body-parser": "~1.15.2",
+		"ccxt": "^1.9.221",
 		"cookie-parser": "~1.4.3",
 		"express": "~4.14.0",
-		"mysql": "^2.15.0",
-		"sequelize": "^4.14.0"
+		"mysql2": "^1.4.2",
+		"node-schedule": "^1.2.5",
+		"pug": "^2.0.0-rc.4",
+		"sequelize": "^4.14.0",
+		"sequelize-cli": "^3.0.0"
 	},
-	"devDependencies": {
-	}
+	"devDependencies": {}
 }
